--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=datingApp.db"
   },
+  "TokenKey":"Super Secret Token Key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
